# mythic-monitor

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
app/: Cargo.toml
app/src/: base.rs  main.rs  parser.rs  sensing.rs  sprites.rs  worker.rs
app/src/base/: logger.rs  path.rs
app/src/parser/: expr.md  expr.rs  toml.md  toml.rs
app/src/sensing/: builtins.rs  sensor.rs
app/src/sensing/builtins/: pdh.rs  windows.rs
app/src/sensing/builtins/windows/: pdh.rs
app/src/sprites/: clip.rs  controller.rs  decls.rs  toml_utils.rs
app/src/worker/: animator.rs  decoder.rs  poller.rs  renderer.rs  watcher.rs
app/src/worker/animator/: windows.rs
app/src/worker/renderer/: interface.rs  windows.rs
example/misc/: config.toml
example/plugins/: counter.c  debug.toml  epoch.c
example/sprites/: cache_fan.toml  list.toml
example/sprites/deskworker/: cpu_load.toml
example/sprites/sonic/: sonic.toml
plugin_gpu/: Cargo.toml
plugin_gpu/src/: lib.rs
res/: architecture.drawio
