[package]
name = "mythic-monitor"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
libwebp-sys = { version="0.14.1", features=[] }
libloading = { version="0.9.0", features=[] }

log = { version="0.4.29", features=[] }
dirs = { version="6.0.0", features=[] }
notify = { version="8.2.0", features=[] }
fs2 = { version="0.4.3", features=[] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
] }
raw-window-handle = { version="0.6", features=[] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
